Projet_GL/src/test/deca/context/valid/unprovided/testObjet/assignWithCast.deca
// Description:
//    Affectation via un cast
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    Créé le 24/01/2018
class A {
}
class B extends A{
}

{
	A a;
	B b;
	b = (B)(a);
}